<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/confuse"
    tools:context="com.ivara.aravi.budgetbuddy.Main6Activity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/expense_of_the_day"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView13"
        android:layout_alignStart="@+id/textView13"
        android:layout_below="@+id/dy"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/month"
        android:inputType="text"
        android:textColor="@android:color/holo_red_light"
        android:textColorHighlight="@color/dot_dark_screen2"
        android:textColorHint="@color/bg_screen1" />

    <EditText
        android:id="@+id/yr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mn"
        android:layout_alignStart="@+id/mn"
        android:layout_below="@+id/mn"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/year"
        android:inputType="text"
        android:textColor="@android:color/holo_red_light"
        android:textColorHighlight="@color/dot_dark_screen2"
        android:textColorHint="@color/bg_screen1" />

    <Button
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/get_expense"
        android:textColor="@color/dot_dark_screen2" />

    <EditText
        android:id="@+id/dy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mn"
        android:layout_alignStart="@+id/mn"
        android:layout_below="@+id/textView13"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/day"
        android:inputType="text"
        android:textColor="@android:color/holo_red_light"
        android:textColorHighlight="@color/dot_dark_screen2"
        android:textColorHint="@color/bg_screen1" />
</RelativeLayout>
