<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:visibility="visible"
    android:background="@drawable/cost"
    tools:context="com.ivara.aravi.budgetbuddy.Main4Activity">

    <TextView
        android:id="@+id/dt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:shadowColor="?attr/colorBackgroundFloating"
        android:text="@string/expense_of_the_day1"
        android:textAllCaps="true"
        android:textColor="@color/bg_screen3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dt"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="33dp"
        android:text="@string/spent_on_food_rs"
        android:textColor="?android:attr/colorPressedHighlight"
        android:textSize="16sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15"
        android:layout_below="@+id/textView15"
        android:layout_marginTop="20dp"
        android:text="@string/spent_on_transportation_rs"
        android:textColor="?android:attr/colorPressedHighlight"
        android:textSize="16sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView16"
        android:layout_alignStart="@+id/textView16"
        android:layout_below="@+id/textView16"
        android:layout_marginTop="19dp"
        android:text="@string/spent_on_shopping_rs"
        android:textColor="?android:attr/colorPressedHighlight"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView17"
        android:layout_alignStart="@+id/textView17"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="25dp"
        android:text="@string/spent_on_mobile_recharge_rs"
        android:textColor="?android:attr/colorPressedHighlight"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView18"
        android:layout_alignStart="@+id/textView18"
        android:layout_below="@+id/textView18"
        android:layout_marginTop="20dp"
        android:text="@string/spent_on_entertainment_rs"
        android:textColor="?android:attr/colorPressedHighlight"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/food"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_above="@+id/trans"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/dot_dark_screen2" />

    <EditText
        android:id="@+id/trans"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/dot_dark_screen2" />

    <EditText
        android:id="@+id/shop"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_above="@+id/textView18"
        android:layout_alignLeft="@+id/trans"
        android:layout_alignStart="@+id/trans"
        android:ems="10"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/dot_dark_screen2" />

    <EditText
        android:id="@+id/rc"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_above="@+id/textView19"
        android:layout_alignLeft="@+id/shop"
        android:layout_alignStart="@+id/shop"
        android:ems="10"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/dot_dark_screen2" />

    <EditText
        android:id="@+id/eta"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignLeft="@+id/rc"
        android:layout_alignStart="@+id/rc"
        android:ems="10"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/dot_dark_screen2" />

    <EditText
        android:id="@+id/exp"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/eta"
        android:layout_alignStart="@+id/eta"
        android:layout_below="@+id/eta"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="number"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorLink="@color/dot_dark_screen2" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/textView19"
        android:layout_alignStart="@+id/textView19"
        android:layout_alignTop="@+id/exp"
        android:layout_marginTop="25dp"
        android:text="@string/other_expense_rs"
        android:textColor="?android:attr/colorPressedHighlight"
        android:textSize="14sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/su"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/save_data"
        android:textColor="@color/bg_screen2" />

    <ImageButton
        android:id="@+id/eim1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/bg_screen2"
        android:contentDescription=""
        app:srcCompat="@android:drawable/btn_dialog"
        tools:ignore="ContentDescription" />

</RelativeLayout>
